create: media from header&main 1200px-767px

--- a/index.html
+++ b/index.html
@@ -10,33 +10,42 @@
   <title>Ehya Books</title>
 </head>
 <body>
-  <header class="header">
-    <div class="container container--header">
+  <header class="navbar navbar--mobile-fixed">
+    <div class="container container--navbar">
       <a href="#" class="logo"><img src="img/Logo.svg" alt="Логотип Ehya"></a>
-      <div class="navbar-wrapper">
-        <ul class="navbar-menu">
-          <li class="navbar-menu__item">Рекомендации</li>
-          <li class="navbar-menu__item">Книги</li>
-          <li class="navbar-menu__item">Блог</li>
+      <div class="navbar-menu navbar-menu--wrapper">
+        <ul class="navbar-menu navbar-menu--mobile-hidden">
+          <li class="navbar-menu__item">
+            <a class="navbar-menu__link hover-link" href="#">Рекомендации</a>
+          </li>
+          <li class="navbar-menu__item">
+            <a class="navbar-menu__link hover-link" href="#">Книги</a>
+          </li>
+          <li class="navbar-menu__item">
+            <a class="navbar-menu__link hover-link" href="#">Блог</a>
+          </li>
         </ul>
-        <button class="header__button">Получить</button>
+        <button class="button navbar-menu__button navbar-menu__button--mobile-hidden">Получить</button>
       </div>
+      <button class="menu-button">
+        <span class="menu-button__line"></span>
+        <span class="menu-button__line"></span>
+        <span class="menu-button__line"></span>
+      </button>
     </div>
-    <button class="menu-button">
-      <span class="menu-button__line"></span>
-      <span class="menu-button__line"></span>
-      <span class="menu-button__line"></span>
-    </button>
+    
   </header>
   <section class="main">
     <div class="container container--main">
       <div class="main-description">
-        <h1 class="main-description__title"><strong class="main-description main-description--color">Design Theory: </strong>The Psychology of Graphic Design Pricing</h1>
+        <h1 class="main-description__title"><strong class="main-description__title main-description__title--color">Design Theory: </strong><br> The Psychology of Graphic Design Pricing</h1>
         <h3 class="main-description__subtitle">КНИГА МИШЕЛЯ ЯНГА</h3>
-        <p class="main-description__text">Спустя 15 лет я управляю собственной студией, выполнив тысячи проектов для крупных клиентов. Теперь я делюсь своими золотыми стратегиями ценообразования на творческую работу.
+        <p class="main-description__text">Спустя 15 лет я управляю собственной студией, выполнив тысячи проектов для крупных клиентов. Теперь я делюсь своими золотыми стратегиями ценообразования на творческую&nbsp;работу.
         </p>
-        <button class="main-description__button main-description__button--bgc-blue">КУПИТЬ СЕЙЧАС</button>
-        <button class="main-description__button main-description__button--bgc-white">ЧИТАТЬ ДЕМО</button>
+        <div class="main-description__button-wrapper">
+          <button class="button main-description__button main-description__button--bgc-blue">КУПИТЬ СЕЙЧАС</button>
+          <button class="button main-description__button main-description__button--bgc-white">ЧИТАТЬ ДЕМО</button>
+        </div>
       </div>
       
       <div class="main-cover">
